# rtos_sdk

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  Kconfig.constants  README.md
app/demo/: CMakeLists.txt  Kconfig  foc_app.cc  foc_app.h  main.c  main.cc  motor_context.h
app/demo/config/: board.dts  prj.conf
app/demo/controller/: calibration.h  pos_controller.cc  position_sensor.h  speed_controller.cc  speed_controller.h
app/product/demo/: CMakeLists.txt  app_services.cc  app_services.h  board_devices.cc  board_devices.h  foc_app.cc  foc_app.h  linker.ld  main.cc  motor_context.h
app/product/demo_ble/: CMakeLists.txt  Kconfig  ble_app.cc  ble_app.h  linker.ld  main.cc
bootloader/common/: CMakeLists.txt
bootloader/common/src/: boot_confirm.cc  boot_ctrl.cc  boot_flash.cc  dfu_crc.cc  sha256.cc
bootloader/loader/: CMakeLists.txt  Kconfig  transport.cc
bootloader/loader/protocol/: dfu_crc.cc  protocol.cc
bootloader/loader/src/: boot_confirm.cc  boot_init.cc  boot_logic.cc  boot_main.cc  image_check.cc  jump_app.cc  sha256.cc
bootloader/loader/upgrade_logic/: flash_copy.cc  upgrade_state.cc
bootloader/upgrade/: CMakeLists.txt  Kconfig
bootloader/upgrade/src/: loader_flash.cc  upgrade_init.cc  upgrade_main.cc
component/algo/: CMakeLists.txt  README.md
component/algo/src/: biquad_filter.cc  lagrange_interp.cc  lead_lag_compensator.cc  leso.cc  ntc_sensor.cc  pid_controller.cc  sweep_signal.cc
component/ble/goodix/: CMakeLists.txt  Kconfig
component/foc/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.motor  README.md
component/foc/src/: angle_estimator.cc  bldc_controller.cc  data_logger.cc  error_handler.cc  flux_observer.cc  foc_controller.cc  hall_sensor.cc  hfi.cc  input_manager.cc  math_utils.cc  motor.cc  motor_measurement.cc  position_controller.cc  svpwm.cc  temperature.cc
component/link/: CMakeLists.txt  Kconfig  README.md
component/link/src/: codec.cc  crc16.cc  router.cc
embedded/: CMakeLists.txt  Kconfig
embedded/arch/: CMakeLists.txt  Kconfig
embedded/arch/arm/: Kconfig
embedded/arch/common/: Kconfig  dynamic_isr.c  init.c  sw_isr_common.c  xip.c
embedded/drivers/: CMakeLists.txt  Kconfig
embedded/drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.gd32  adc_gd32.cc
embedded/drivers/cache/: Kconfig
embedded/drivers/can/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.stm32  can_gd32.cc  can_stm32.cc
embedded/drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_api.c  clock_stm32.cc  st,stm32h7_clock.c
embedded/drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.gd32  dma_gd32.cc
embedded/drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.goodix  Kconfig.stm32  flash_gd32.cc  flash_goodix.cc  flash_stm32.cc
embedded/drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.gr5525  Kconfig.stm32  gpio_api.c  gpio_gd32.cc  gpio_gr5525.cc  gpio_stm32.c  gpio_stm32.cc
embedded/drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.stm32  i2c_stm32.cc
embedded/drivers/imu/: CMakeLists.txt  Kconfig
embedded/drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.stm32  exti_stm32.cc  gpio_intc_stm32.cc  intc_exti_stm32.c  intc_exti_stm32_priv.h  intc_gpio_stm32.c
embedded/drivers/irq_controller/: CMakeLists.txt  arm,v7m_nvic.c  irq_controller_api.c
embedded/drivers/log/: CMakeLists.txt  log.cc
embedded/drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.gd32  pinctrl_common.cc  pinctrl_gd32.cc
embedded/drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.stm32  pwm_gd32.cc  pwm_stm32.cc
embedded/drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.gr5525  Kconfig.stm32  spi_gd32.cc  spi_gr5525.cc  spi_stm32.cc
embedded/drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.cortex_m_systick  cortex_m_systick.c
embedded/drivers/uart/: CMakeLists.txt  Kconfig  Kconfig.gd32  Kconfig.gr5525  Kconfig.stm32  uart_gd32.cc  uart_gr5525.cc  uart_stm32.cc
embedded/dts/: Kconfig
embedded/dts/arm/: armv7-m.dtsi  armv8-m.dtsi
embedded/dts/bindings/: vendor-prefixes.txt
embedded/dts/common/: dt_util.h
embedded/include/: assert.h  cache.h  device.h  device_base.h  init.h  initcall.h  irq.h  log.h  mem.h  mem_alloc.h  mmem.h  pinctrl.h  ringbuf.h  sct_load.h  sensor_core.h  spinlock.h  sw_isr_table.h
embedded/include/arch/: arch_inlines.h  arch_interface.h  cache.h  cpu.h
embedded/include/devicetree/: can.h  clocks.h  display.h  dma.h  fixed-partitions.h  gpio.h  io-channels.h  mbox.h  port-endpoint.h  pwms.h  reset.h  spi.h
embedded/include/drivers/: adc.h  can.h  clock.h  clock_control.h  dma.h  exti.h  flash.h  gpio.h  gpio_intc.h  i2c.h  irq_controller.h  pwm.h  spi.h  status.h  uart.h
embedded/include/dt-bindings/: dt-util.h
embedded/include/gpio/: gpio_utils.h
embedded/include/linker/: linker-def.h  section_tags.h  sections.h
embedded/include/osal/: mutex.h  osal.h  semaphore.h  thread.h
embedded/include/pm/: device.h  device_runtime.h  pm.h  policy.h  state.h
embedded/include/soc/: soc.h  soc_hooks.h
embedded/include/sys/: __assert.h  atomic.h  atomic_types.h  barrier.h  barrier_builtin.h  iterable_sections.h  list_gen.h  slist.h  sys_io.h  util.h  util_macro.h
embedded/include/toolchain/: armclang.h  gcc.h  llvm.h  mwdt.h
embedded/linkscript/: gd,gd32f503.ld  goodix,gr5525.ld  st,stm32h743.ld  st,stm32h743xx.ld  st,stm32h743xxxbb.ld
embedded/modules/: CMakeLists.txt  Kconfig
embedded/modules/cmsis/: CMakeLists.txt  Kconfig  cmsis_core.h  cmsis_core_m.h
embedded/modules/lwmem/: CMakeLists.txt  README.txt
embedded/osal/: CMakeLists.txt  Kconfig  mem.cc  mmem.c
embedded/osal/baremetal/: CMakeLists.txt  mem.cc  osal.cc  osal_types.h
embedded/osal/freertos/: CMakeLists.txt  FreeRTOSConfig.h  (+6 more)
embedded/soc/: CMakeLists.txt  Kconfig  README.md  soc.c  soc.yml
embedded/system/: CMakeLists.txt  KConfig  assert.cc  device.c  fault.cc  init.c  init.cc  mmem.c  sensor_core.cc
kernel/: CMakeLists.txt  Kconfig  device.c  init.c  kheap.c  mem_domain.c  mempool.c  mutex.c  sched.c  sem.c  thread.c  timeout.c  userspace.c
kernel/arch/: CMakeLists.txt
(+634 files in other folders)
